<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Floating Clock</string>
    <string name="app_title">Floating Clock</string>

    <string name="switch_floating_window">Floating Window</string>
    <string name="font_selection">Font</string>
    <string name="color_selection">Color</string>

    <string name="permission_overlay_title">Permission Required</string>
    <string name="permission_overlay_required">"Display over other apps" permission is required for the floating clock</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>

    <string name="battery_title">Battery Optimization</string>
    <string name="battery_optimization_guide">Disable battery optimization to prevent the floating clock from being killed</string>

    <string name="notification_channel_name">Floating Clock Service</string>
    <string name="notification_channel_desc">Floating clock foreground service notification channel</string>
    <string name="notification_title">Floating Clock Running</string>
    <string name="notification_content">Tap to open settings</string>

    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_required">Notification permission is required to keep the floating clock running</string>
    <string name="dialog_allow">Allow</string>
    <string name="dialog_deny">Deny</string>

    <string name="font_default">Default</string>
    <string name="font_monospace">Monospace</string>
    <string name="font_serif">Serif</string>

    <string name="color_white">White</string>
    <string name="color_black">Black</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_magenta">Magenta</string>
    <string name="foreground_service_description">The floating clock needs to stay in foreground to display time in real-time</string>
</resources>
